fix: horizontal align

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+.wrapper {text-align: center;}
 #photo {
     display: inline-block;
 }
